src/styles/search.css
li.search-result-item {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: repeat(3, 1fr);

  padding: 1rem;

  border-radius: var(--radius-surface);

  background-color: var(--clr-base);
}

a.search-result-link-title {
  grid-column: span 2;

  text-decoration: none;

  transition-property: color;
  transition-duration: 0.15s;
  transition-timing-function: ease-out;
}

a.search-result-link-title:hover {
  color: var(--clr-primary);
}

a.search-result-link-title {
  font-weight: bold;
  font-size: 1.2rem;
}

.search-result-date {
  grid-column: span 2;
}

a.search-result-link {
  align-self: center;

  font-weight: 600;
  text-decoration: none;

  margin-left: auto;
  background-color: var(--clr-mantle);

  padding-inline: 1rem;
  padding-block: 0.8rem;

  border-radius: var(--radius-input);
  outline: 1px solid var(--clr-surface-0);

  height: fit-content;

  transition-property: color, outline, background-color;
  transition-duration: 0.15s;
  transition-timing-function: ease-out;
}

a.search-result-link:hover {
  background-color: var(--clr-surface-0);
  outline: 1px solid var(--clr-surface-1);
  color: var(--clr-primary);
}

